public/style.css
* {
  margin: 0 auto;
  padding: 0;

}
body{
  background-color: #EFEAEA;

}
p 
{
  font-size:  1.1em;
}
header {
  height: 4em;
  background-color: #EFEAEA;
  padding: 0;
  padding-top: 1em;
  margin: 0;
}

h1  {
  margin: 0 auto;
  padding: 0;
  text-align: center;
  font-family: sans-serif;
  font-family: 'Open Sans', sans-serif;
  font-weight: 900;
  color: rgb(75, 199, 199);
  font-size: 2.2em;
}

a {
  text-decoration: none;
  color: rgb(75, 199, 199);
}

h2{
    margin: 0 auto;
  padding: 0;
  text-align: center;
  font-family: sans-serif;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  color: rgb(122, 122, 122);
  font-size: 1.4em;
}
}

.content {
  margin: 0 auto;
  padding: 0;
  text-align: center;
  width: 95%;
  height: 500px;
  margin-bottom: 0px;
  padding: 10px;
  background-color: #EFEAEA;
  text-align: center;
  /*margin-top: 1em;*/
}

div#editor {
  border: 1px solid #999;
  background-color: white;
  max-height: 100%;
  text-align: center;
}

#toolbar button {
  border-radius: 0;
  /*display: block;*/
}

#toolbar .shareurl {
  background-color: red;
}

#toolbar input {
  width: 200px;
}

#url {
  margin: 0 auto;
  padding: 0;
  text-align: center;
  width: 95%;
  height: 30px;
  font-size: 16px;
  max-width: 500px;
}

.content {
  margin: 0 auto;
  padding: 0;
  text-align: center;
}

.searchurl {
  width: 150px;
  height: 150px;
  display: block;
  margin-top: 40px;
  background-color: rgb(68, 215, 204);;
  font-size: 22px;
  background-image: url("fork.png");
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 100px;
  border: none;
}

